crates/pixelchart/tests/snapshots/render_tests__render_scatter_with_trend_line.snap
---
source: crates/pixelchart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 26 commands
overlays: 9
  [0] (36, 278) Center "0.8"
  [1] (117, 278) Center "2.0"
  [2] (253, 278) Center "4.0"
  [3] (388, 278) Center "6.0"
  [4] (31, 273) Right "1"
  [5] (31, 230) Right "2"
  [6] (31, 142) Right "4"
  [7] (31, 56) Right "6"
  [8] (31, 12) Right "7"
