crates/pixelchart/tests/snapshots/render_tests__render_single_bar.snap
---
source: crates/pixelchart/tests/render_tests.rs
assertion_line: 416
expression: summarize(&rendered)
---
canvas: 400x300, 13 commands
overlays: 6
  [0] (52, 267) Right "0"
  [1] (52, 203) Right "50"
  [2] (52, 139) Right "100"
  [3] (52, 76) Right "150"
  [4] (52, 12) Right "200"
  [5] (224, 281) Center "Only"
