crates/pixelchart/tests/snapshots/render_tests__render_single_point_scatter.snap
---
source: crates/pixelchart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 27 commands
overlays: 11
  [0] (36, 278) Center "0"
  [1] (106, 278) Center "2"
  [2] (177, 278) Center "4"
  [3] (247, 278) Center "6"
  [4] (318, 278) Center "8"
  [5] (388, 278) Center "10"
  [6] (31, 273) Right "0.0"
  [7] (31, 208) Right "2.5"
  [8] (31, 142) Right "5.0"
  [9] (31, 77) Right "7.5"
  [10] (31, 12) Right "10.0"
