crates/pixelchart/tests/snapshots/render_tests__render_tiny_canvas.snap
---
source: crates/pixelchart/tests/render_tests.rs
assertion_line: 426
expression: summarize(&rendered)
---
canvas: 40x30, 20 commands
overlays: 8
  [0] (34, 20) Center "0"
  [1] (35, 20) Center "1"
  [2] (35, 20) Center "2"
  [3] (36, 20) Center "3"
  [4] (26, 14) Right "1"
  [5] (26, 10) Right "2"
  [6] (26, 7) Right "3"
  [7] (26, 4) Right "4"
