crates/pixelchart/tests/snapshots/render_tests__render_with_custom_axis_range.snap
---
source: crates/pixelchart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 29 commands
overlays: 11
  [0] (36, 278) Center "0"
  [1] (106, 278) Center "2"
  [2] (177, 278) Center "4"
  [3] (247, 278) Center "6"
  [4] (318, 278) Center "8"
  [5] (388, 278) Center "10"
  [6] (31, 273) Right "0"
  [7] (31, 208) Right "5"
  [8] (31, 142) Right "10"
  [9] (31, 77) Right "15"
  [10] (31, 12) Right "20"
